--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ openai
 spacy
 pandas
 seaborn
+matplotlib
 https://github.com/explosion/spacy-models/releases/download/nl_core_news_lg-3.5.0/nl_core_news_lg-3.5.0.tar.gz 
