--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ spacy
 pandas
 seaborn
 matplotlib
+wordcloud
+collections
+nltk
 https://github.com/explosion/spacy-models/releases/download/nl_core_news_lg-3.5.0/nl_core_news_lg-3.5.0.tar.gz 
