--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,7 @@ openai
 spacy
 pandas
 seaborn
-matplotlib
-wordcloud
-collections
-nltk
+matplotlib==3.2.1
+wordcloud==1.8.2.2
+nltk==3.7
 https://github.com/explosion/spacy-models/releases/download/nl_core_news_lg-3.5.0/nl_core_news_lg-3.5.0.tar.gz 
